--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -70,18 +70,7 @@ Sampler's core task is sampling the output register from execution of quantum ci
 
 The input is one or more PUBs, in the format  (`<single circuit>`, `<optional one or more parameter values>`, `<optional shots>`), where there can be multiple `parameter values` items, and each item can be either an array or a single parameter, depending on the chosen circuit.
 
-The output is counts or per-shot measurements, as `PubResult` objects, without weights. The result class, however, has methods to return weighted samples, such as counts.
-
-Input and output notes:
-
-* Elements from each PUB are aggregated. For example, each array of parameter values in the PUB is applied to the PUB's circuit.
-* Obeys program outputs. Typically this is a bit array but can also be an array of complex numbers (measurement level 1).
-* Returns raw data type. Data from each shot is returned (analogous to `memory=True` in the `backend.run` interface), and post-processing is done by using convenience methods.
-* Output data is grouped by output registers. You need the classical register name to get the results. By default, it is named `meas` if you use `measure_all()`. You can find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
-* Supports circuits with classical feedforward and control flow (dynamic circuits).
-  <Admonition type = "note">
-  Dynamic circuits do not support dynamical decoupling.
-  </Admonition>
+The output is counts or per-shot measurements, as `PubResult` objects, without weights. The result class, however, has methods to return weighted samples, such as counts. See [Primitive inputs and outputs](primitive-input-output#broadcasting-rules) for full details.
 
 Example:
 
