--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -147,7 +147,7 @@
     "service = QiskitRuntimeService(channel='ibm_quantum', token=API_TOKEN)\n",
     "\n",
     "abstract_circuit = random_circuit(\n",
-    "    num_qubits=5, depth=4, measure=True\n",
+    "    num_qubits=100, depth=4, measure=True\n",
     ")\n",
     "\n",
     "selector = IBMLeastNoisyQPUSelector(\n",
@@ -313,6 +313,20 @@
    "metadata": {},
    "source": [
     "At this point, your program can interact with the files, as you would a local experiment. `file_upload()` , `file_download()`, and `file_delete()` can be called from your local experiment, or your uploaded program, for consistent and flexible data management."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "\n",
+    "<Admonition type=\"info\" title=\"Recommendations\">\n",
+    "\n",
+    "- Review the [full guide](./serverless-port-code) to port your existing workload to leverage Qiskit Serverless.\n",
+    "- Explore how researchers used Qiskit Serverless and [quantum-centric supercomputing to explore quantum chemistry](https://arxiv.org/abs/2405.05068v1).\n",
+    "\n",
+    "</Admonition>"
    ]
   }
  ],
