--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c5118119-5892-4ad9-9908-107795a1f1fa",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "33d8cc11-6c6f-4838-8038-dd9994476db4",
    "metadata": {},
    "outputs": [
@@ -95,29 +95,29 @@
       " 'IIIIIIIIIIIIIIIIIIIIIIIIYZI', 'IIIIIIIIIIIIIIIIIIIIIIIIZII',\n",
       " 'IIIIIIIIIIIIIIIIIIIIIIIIZXI', 'IIIIIIIIIIIIIIIIIIIIIIIIZYI',\n",
       " 'IIIIIIIIIIIIIIIIIIIIIIIIZZI', 'IIIIIIIIIIIIIIIIIIIIIIIXIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIIIYIII', 'IIIIIIIIIIIIIIIIIIIIIIIZIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIIXIIII', 'IIIIIIIIIIIIIIIIIIIIIIXXIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIIXYIII', 'IIIIIIIIIIIIIIIIIIIIIIXZIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIIYIIII', 'IIIIIIIIIIIIIIIIIIIIIIYXIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIIYYIII', 'IIIIIIIIIIIIIIIIIIIIIIYZIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIIZIIII', 'IIIIIIIIIIIIIIIIIIIIIIZXIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIIZYIII', 'IIIIIIIIIIIIIIIIIIIIIIZZIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIXIIIII', 'IIIIIIIIIIIIIIIIIIIIIXIIXII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIXIIYII', 'IIIIIIIIIIIIIIIIIIIIIXIIZII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIXXIIII', 'IIIIIIIIIIIIIIIIIIIIIXYIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIXZIIII', 'IIIIIIIIIIIIIIIIIIIIIYIIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIYIIXII', 'IIIIIIIIIIIIIIIIIIIIIYIIYII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIYIIZII', 'IIIIIIIIIIIIIIIIIIIIIYXIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIYYIIII', 'IIIIIIIIIIIIIIIIIIIIIYZIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIZIIIII', 'IIIIIIIIIIIIIIIIIIIIIZIIXII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIZIIYII', 'IIIIIIIIIIIIIIIIIIIIIZIIZII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIZXIIII', 'IIIIIIIIIIIIIIIIIIIIIZYIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIIZZIIII', 'IIIIIIIIIIIIIIIIIIIIXIIIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIXIIXIII', 'IIIIIIIIIIIIIIIIIIIIXIIYIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIXIIZIII', 'IIIIIIIIIIIIIIIIIIIIYIIIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIYIIXIII', 'IIIIIIIIIIIIIIIIIIIIYIIYIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIYIIZIII', 'IIIIIIIIIIIIIIIIIIIIZIIIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIZIIXIII', 'IIIIIIIIIIIIIIIIIIIIZIIYIII', ...], rates=[0.00067, 0.00083, 0.00523, 0.00044, 0.00011, 2e-05, 7e-05, 0.00031, 0.00011, 2e-05, 7e-05, 0.0, 0.0, 0.0, 0.0, 0.00092, 0.00052, 0.00065, 9e-05, 0.0, 0.0, 0.0, 0.00205, 0.0, 0.0, 0.0, 0.0017, 8e-05, 0.00083, 0.00251, 0.00059, 0.0002, 0.0, 0.0, 0.00064, 0.0, 0.0002, 0.0, 0.0005, 0.0, 0.0, 0.00314, 0.00065, 0.0, 0.0, 0.00012, 0.00083, 0.00079, 0.00027, 0.00053, 0.0, 0.0012, 0.00075, 0.0, 0.0, 0.00194, 0.0, 0.0, 0.00051, 0.00142, 0.0, 5e-05, 0.00248, 0.00204, 0.00102, 0.00027, 4e-05, 0.00122, 2e-05, 0.00027, 0.00044, 0.0, 0.0, 0.0, 0.00175, 0.00083, 0.00087, 0.00116, 0.00081, 0.0, 0.0, 0.0, 0.00104, 0.0, 0.00013, 9e-05, 0.00048, 0.00013, 0.0, 9e-05, 0.00037, 1e-05, 8e-05, 6e-05, 0.00062, 0.0, 0.0, 0.00046, 1e-05, 0.00012, 2e-05, 0.00053, 7e-05, 0.0, 0.00134, 0.0, 0.00041, 0.00035, 0.00018, 0.00071, 0.00126, 0.00087, 0.00089, 0.00073, 0.00093, 0.00123, 0.00122, 0.0, 0.00056, 0.0, 0.0, 0.0009, 0.00077, 0.0002, 0.00013, 0.00068, 0.00068, 0.0, 0.00011, 0.0, 0.00079, 0.0, 0.0, 0.00011, 0.00062, 7e-05, 2e-05, 2e-05, 0.00131, 0.0009, 0.00079, 0.00031, 0.00033, 0.00023, 0.00015, 0.00045, 0.00024, 0.0, 0.00013, 0.00054, 0.00116, 0.0, 0.0, 0.00021, 0.00189, 0.0, 0.00021, 0.0, 0.00188, 0.0, 0.0, 0.0, 0.00076, 0.001, 0.00097, 0.00017, 0.00046, 0.0, 0.0, 0.00064, 0.00056, 0.00013, 0.0, 0.00055, 0.00111, 4e-05, 4e-05, 0.0, 0.00076, 0.0, 0.00031, 0.00017, 0.00188, 0.00031, 0.0, 0.00017, 0.00148, 0.00211, 0.00138, 0.0001, 0.00052, 0.00027, 0.00012, 0.00087, 0.00068, 0.0, 4e-05, 0.00071, 0.00059, 0.0, 2e-05, 1e-05, 0.0007, 0.0, 1e-05, 2e-05, 0.00109, 0.00023, 5e-05, 5e-05, 0.00094, 0.00072, 0.00061, 0.0, 0.00028, 2e-05, 1e-05, 0.00081, 0.00028, 0.0, 0.0, 0.00081, 0.00123, 0.0, 0.00027, 0.00027, 0.00181, 0.00046, 0.00026, 0.0, 0.00706, 0.00046, 0.0, 0.00026, 0.00012, 0.00061, 0.00039, 0.00034, 0.00048, 0.00025, 0.00021, 0.00172, 0.00073, 0.00079, 0.00778, 0.00253, 0.00016, 0.00317, 0.0, 0.00094, 0.0, 0.00013, 0.00037, 0.00267, 0.00066, 0.00046, 0.0, 0.00013, 0.0, 0.00037, 0.0011, 0.00128, 0.00236, 0.00124, 0.0, 0.0, 0.00518, 0.00067, 3e-05, 3e-05, 2e-05, 0.00095, 3e-05, 2e-05, 3e-05, 0.00079, 0.0, 0.00014, 0.00014, 0.00176, 0.00103, 0.00074, 0.00035, 0.0, 0.0, 0.0, 0.00121, 3e-05, 0.00019, 0.00016, 0.00112, 0.00114, 0.0, 0.0, 0.0, 0.0, 0.0, 0.00109, 0.0, 0.0, 0.0, 0.0, 0.00124, 0.0036, 0.00357, 0.0, 0.0, 0.00357, 0.0036, 0.0, 0.0, 0.00066, 0.00052, 0.00093, 0.00079])\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIXXII', 'IIIIIIIIIIIIIIIIIIIIIIIXYII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIXZII', 'IIIIIIIIIIIIIIIIIIIIIIIYIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIYXII', 'IIIIIIIIIIIIIIIIIIIIIIIYYII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIYZII', 'IIIIIIIIIIIIIIIIIIIIIIIZIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIZXII', 'IIIIIIIIIIIIIIIIIIIIIIIZYII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIZZII', 'IIIIIIIIIIIIIIIIIIIIIIXIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIXXIII', 'IIIIIIIIIIIIIIIIIIIIIIXYIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIXZIII', 'IIIIIIIIIIIIIIIIIIIIIIYIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIYXIII', 'IIIIIIIIIIIIIIIIIIIIIIYYIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIYZIII', 'IIIIIIIIIIIIIIIIIIIIIIZIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIZXIII', 'IIIIIIIIIIIIIIIIIIIIIIZYIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIZZIII', 'IIIIIIIIIIIIIIIIIIIIIXIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIXIIIIX', 'IIIIIIIIIIIIIIIIIIIIIXIIIIY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIXIIIIZ', 'IIIIIIIIIIIIIIIIIIIIIYIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIYIIIIX', 'IIIIIIIIIIIIIIIIIIIIIYIIIIY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIYIIIIZ', 'IIIIIIIIIIIIIIIIIIIIIZIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIZIIIIX', 'IIIIIIIIIIIIIIIIIIIIIZIIIIY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIZIIIIZ', 'IIIIIIIIIIIIIIIIIIIIXIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIXIXIIII', 'IIIIIIIIIIIIIIIIIIIIXIYIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIXIZIIII', 'IIIIIIIIIIIIIIIIIIIIYIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIYIXIIII', 'IIIIIIIIIIIIIIIIIIIIYIYIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIYIZIIII', 'IIIIIIIIIIIIIIIIIIIIZIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIZIXIIII', 'IIIIIIIIIIIIIIIIIIIIZIYIIII', ...], rates=[0.00226, 0.00106, 0.00066, 0.0008, 0.00069, 0.0, 0.0003, 0.00062, 0.00088, 7e-05, 5e-05, 0.00056, 0.00022, 0.00087, 0.00127, 0.00187, 0.0, 0.0, 0.0, 0.00129, 0.0, 0.0, 0.0, 0.00102, 7e-05, 7e-05, 0.00498, 0.00078, 0.00129, 0.00187, 0.00041, 0.00031, 0.0, 0.0, 0.00056, 0.00037, 0.00015, 0.0, 0.0005, 0.00072, 8e-05, 0.00011, 0.0, 0.00096, 8e-05, 0.0, 0.00011, 0.00066, 0.0, 8e-05, 8e-05, 0.00047, 0.0, 0.0, 0.0002, 0.00046, 0.0, 0.0002, 0.0, 0.00107, 0.0, 1e-05, 1e-05, 0.00513, 0.00115, 0.0009, 0.0, 0.0008, 0.0, 0.0, 0.00355, 0.00185, 0.0, 7e-05, 0.0025, 0.0, 0.00216, 0.00442, 0.00247, 0.00794, 0.00521, 0.00066, 7e-05, 0.0, 0.00064, 0.00105, 0.0, 0.0, 0.0, 0.0012, 0.00086, 0.00076, 0.00077, 8e-05, 0.0, 7e-05, 3e-05, 0.0, 4e-05, 0.00018, 0.00135, 0.0, 0.00045, 0.00062, 0.00028, 0.00023, 0.00018, 0.00106, 0.0, 0.00067, 0.00041, 0.00107, 0.00011, 0.0, 0.0, 0.0, 0.0, 0.00096, 0.00082, 0.0, 0.0, 0.00074, 0.00087, 0.00027, 0.0007, 0.00016, 0.0, 0.00019, 0.00078, 0.00021, 0.0, 0.0008, 0.00029, 0.00151, 0.00163, 0.00083, 0.00018, 0.0, 0.00012, 0.00046, 0.0, 0.00018, 0.00012, 0.00156, 0.00033, 0.00033, 0.00595, 0.00145, 0.00076, 0.00113, 0.00015, 0.00028, 0.00028, 8e-05, 0.00115, 0.00099, 0.0, 0.0, 0.00043, 0.0011, 7e-05, 3e-05, 8e-05, 0.00058, 7e-05, 8e-05, 3e-05, 0.00557, 0.0, 0.0, 0.0, 0.00097, 0.00076, 0.00128, 0.00046, 0.00025, 0.00023, 0.0, 0.00132, 0.00106, 0.00041, 0.0, 0.00051, 0.001, 4e-05, 7e-05, 5e-05, 0.0008, 4e-05, 5e-05, 7e-05, 0.00089, 7e-05, 0.00013, 0.00013, 0.0, 0.0, 0.00093, 0.0, 0.0017, 0.00065, 0.0, 4e-05, 0.00062, 0.00472, 0.0052, 0.0, 0.00103, 0.00097, 0.00117, 0.0002, 0.00045, 2e-05, 0.00018, 0.00067, 0.00051, 0.0, 0.0, 0.00061, 0.00069, 0.00248, 0.00072, 0.00061, 0.00092, 0.0, 5e-05, 0.00176, 0.00137, 0.00098, 0.0, 0.00131, 0.0, 0.0, 0.0, 0.00028, 0.0, 0.0, 0.00023, 0.0, 0.00011, 0.0, 0.00013, 0.00012, 0.00327, 0.00017, 0.00022, 0.0004, 0.00302, 0.00048, 0.00049, 0.0059, 0.00465, 5e-05, 0.00072, 0.00427, 0.00133, 1e-05, 0.0, 0.0, 0.00113, 7e-05, 5e-05, 5e-05, 0.00581, 0.0, 0.00011, 0.00011, 0.0, 0.0, 0.0, 0.0, 0.00361, 6e-05, 0.00123, 0.0, 0.00884, 6e-05, 0.0, 0.00123, 0.00072, 0.00092, 0.00098, 0.00079, 0.00092, 0.00072, 0.0, 0.0, 2e-05, 0.0002, 0.00066, 0.00019, 5e-05, 0.0, 0.00044, 0.00018, 0.00158, 0.00057, 0.0005, 6e-05, 0.0, 0.00048, 0.00103, 0.00073, 0.00025, 0.00029, 6e-05, 0.00046, 0.0, 0.0, 0.0, 0.01012, 0.00489, 0.0, 0.0, 3e-05])\n",
       "\n"
      ]
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8f35d68a-b459-4f1c-ae44-a01bbe700ed0",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "d8b504c1-17ad-4e23-b508-eac1955bd1d6",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "8aa753bc-915d-4d47-ba56-5179ec9cf4ca",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "6dcb70fe-e291-4b5a-a79b-14cace921905",
    "metadata": {},
    "outputs": [],
