--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Run your first Qiskit Serverless workload remotely\n",
     "\n",
-    "This section explores how to use `qiskit-ibm-catalog` to list programs available in Serverless, pass inputs into these programs, run them remotely, check their status, and retrieve results and logs.\n",
+    "This section explores how to use `qiskit-ibm-catalog` to list programs available in Qiskit Serverless, pass inputs into these programs, run them remotely, check their status, and retrieve results and logs.\n",
     "\n",
     "Be sure you have authenticated to Qiskit Serverless with your [IBM Quantum account](https://quantum.ibm.com/account) (see [Deploy to IBM Quantum Platform](./serverless-first-program#deploy-to-ibm-quantum-platform) for instructions)."
    ]
@@ -203,7 +203,7 @@
     "\n",
     "- **`QUEUED`**: The remote program is in the Qiskit Serverless queue. The queue priority is currently based on how much you've used Qiskit Serverless\n",
     "- **`INITIALIZING`**: The remote program is starting; this includes setting up the remote environment and installing dependencies\n",
-    "- **`RUNNING`**: The program is running. At this stage, if you have `print()` outputs in your program, you should be able to retrieve logs using `job.logs()`\n",
+    "- **`RUNNING`**: The program is running. At this stage, if you have `print()` outputs in your program, you can retrieve logs using `job.logs()`\n",
     "- **`DONE`**: The program is complete, and you can retrieve data stored in `save_result()` with `job.results()`"
    ]
   },
