--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -17,7 +17,7 @@
    "id": "b2d40a63-3359-46e9-8f1b-4746b449b407",
    "metadata": {},
    "source": [
-    "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the original `transpile_parallel.py` example:"
+    "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the `transpile_parallel.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic:"
    ]
   },
   {
