--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -324,7 +324,7 @@
     "<Admonition type=\"info\" title=\"Recommendations\">\n",
     "\n",
     "- Learn how to [port your existing code to Qiskit Serverless ](./serverless-port-code).\n",
-    "- Explore how researchers used Qiskit Serverless and quantum-centric supercomputing to [explore quantum chemistry](https://arxiv.org/abs/2405.05068v1).\n",
+    "- Read a paper in which researchers used Qiskit Serverless and quantum-centric supercomputing to [explore quantum chemistry](https://arxiv.org/abs/2405.05068v1).\n",
     "\n",
     "</Admonition>"
    ]
