--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -112,17 +112,39 @@ In the blog, we take a closer look at how users can take advantage of these capa
 
 IBM Quantum documentation recently added a number of user-facing improvements, including content updates and new features. Many of these changes are a result of specific user requests! Check out the highlights below.
 
+
+### New and updated content
+
 **New pages**
 
-- [Error mitigation techniques](./error-mitigation-and-suppression-techniques)
-- [Error mitigation and suppression techniques](./error-mitigation-and-suppression-techniques)
-- [The Operator class](./operator-class)
-- [Transpile against custom backends](./custom-backend)
+- [Primitive inputs and outputs](./primitive-input-output)
+- [Noise learning helper](./noise-learning)
+- Expanded and improved [Qiskit Serverless](./serverless) docs, including four new pages that walk you through how to use Qiskit Serverless: [Write your first Qiskit Serverless program](./serverless-first-program), [Run your first Qiskit Serverless workload remotely](./serverless-run-first-workload), [Manage Qiskit Serverless compute and data resources](./serverless-manage-resources), and [Port code to Qiskit Serverless](./serverless-port-code) 
+
+**Content additions and improvements**
+
+- Clarity around the [maximum execution time for batches](./max-execution-time#batch-maximum-execution-time), how usage is reported for [failed and canceled jobs](./execution-modes#failed-and-canceled-jobs), and how [usage affects job priority within an instance](./instances#how-usage-affects-job-priority-within-an-instance).
+- [Probabilistic error amplication (PEA)](/error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea) has been added to the Error techniques topic.
+- New [options compatibilitiy table](./runtime-options-overview#options-compatibility) for Qiskit Runtime error mitigation tools.
+- Updated docs to reflect that [V1 primitives are no longer supported](../migration-guides/v2-primitives).
+- Copyediting and typo fixes across the docs, including bugs reported by community contributors.
+
 
 **New API reference docs**
 
-- [Qiskit Transpiler Service Client](/api/qiskit-ibm-transpiler)
-- [Qiskit Transpiler Service REST API](/api/qiskit-transpiler-service-rest)
+- [Qiskit SDK v1.2](../api/qiskit/release-notes/1.2)
+- [Qiskit Runtime v0.28](../api/qiskit-ibm-runtime/release-notes#0280-2024-08-15)
+- [qiskit-ibm-transpiler v0.4 ](../api/qiskit-ibm-transpiler/transpiler_service) 
+
+### User experience improvements
+
+- The table of contents for the IBM Quantum Platform docs is now organized into Get started, Workflow, and Tools sections. Whether you are looking for documentation specific to a Qiskit pattern step, or simply want to jump straight to the tool you need, you can quickly browse for the content you need.
+- The [landing page](https://docs.quantum.ibm.com/) has a fresh new design with an improved focus on API references.
+- We've launched an *Additional resources* tab that directs you to the [migration guides](../migration-guides/), [open-source resources](../open-source/), [responsible quantum computing guidelines](../responsible-quantum-computing), and the [Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem).
+- Tables in the docs now have borders to improve readability.
+- Alt-text has been added to all images to make them more accessible.
+- Heading size has been adjusted so that it does not change when the screen size changes.
+- Code styling has been improved, including bigger fonts and better contrast for code block comments.
 
 *A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
 
