--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -488,7 +488,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "PUBs and primitive results"
+  "title": "Primitive inputs and outputs"
  },
  "nbformat": 4,
  "nbformat_minor": 2
